--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -38,7 +38,7 @@
                             <li><a href="">Bịt mắt ngủ</a></li>
                         </ul>
                     </li>
-                    <li><a href="">Giỏ hàng</a></li>
+                    <li><a href="/cart">Giỏ hàng</a></li>
                     <li><a href="/register">Đăng nhập</a></li>
                     <li><input type="text" placeholder="Search.."></li>
                 </ul>
